--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1><big>Sobre MIM</big></h1>
     <hr>
     <br>
-    <p>Guilherme Barbosa da silva sou estudante de <b>Engenharia de software</b> na <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px blueviolet;"><a href="https://estacio.br/" target="_blank" rel="external" style="background-color: blue;color: white;border: 3px solid white;text-decoration: none;text-shadow: 8px;font-size: 13px;border-radius: 10px 10px;"><b>Estácio</b> estou aprendendo sobre Lógica da programação e Desenvolvimento FULL-STACK na <img src="Faisp.webp" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px red;"><a href="https://faisp.edu.br/" target="_blank" rel="external" style="background-color: white;color: red;border: 3px solid black;box-shadow: 5px 5px 5px red;font-size: 13px;text-decoration: none;text-shadow: 8px;border-radius: 10px 10px;"><b>FAISP</b></a></a></p>
+    <p>Guilherme Barbosa da silva sou estudante de <b>Engenharia de software</b> na <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px blueviolet;"><a href="https://estacio.br/" target="_blank" rel="external" style="background-color: blue;color: white;border: 3px solid white;text-decoration: none;text-shadow: 8px;font-size: 13px;border-radius: 10px 10px;"><b>Estácio</b></a> estou aprendendo sobre Lógica da programação e Desenvolvimento FULL-STACK na <img src="Faisp.webp" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px red;"><a href="https://faisp.edu.br/" target="_blank" rel="external" style="background-color: white;color: red;border: 3px solid black;box-shadow: 5px 5px 5px red;font-size: 13px;text-decoration: none;text-shadow: 8px;border-radius: 10px 10px;"><b>FAISP</b></a></a></p>
     <p>Desenvolvimento FULL-STACK engloba todo o desenvolvimento web indo do front-end até o back end</p>
     <p>Indo até mesmo até o banco de dados o MYsql</p>
     </header>
@@ -70,9 +70,9 @@
     <section id="Projetos" style="background-color: whitesmoke;">
     <h2><big>Meus Projetos</big></h2>
     <br>
-    <div class="summary"><div id="text"><details><summary style="background-color: black;color: white;border: 5px solid white;box-shadow: 8px 8px 8px black;"><a href="projetos.html" target="_blank" rel="external">Instrumentais</a></summary></details></div></div>
+    <div class="summary"><div id="text"><details><summary style="background-color: black;color: white;border: 5px solid white;box-shadow: 8px 8px 8px black;"><a href="projetos.html" target="_blank" rel="external" style="color: white;">Instrumentais</a></summary></details></div></div>
     <br>
-    <div class="summary"><div id="text"><details><summary style="background-color: black;color: white;border: 5px solid white;box-shadow: 8px 8px 8px black;"><a href="formulario.html" target="_blank" rel="external">Formulario</a></summary></details></div></div>
+    <div class="summary"><div id="text"><details><summary style="background-color: black;color: white;border: 5px solid white;box-shadow: 8px 8px 8px black;"><a href="formulario.html" target="_blank" rel="external" style="color: white;">Formulario</a></summary></details></div></div>
     </section>
     </div>
     <br>
