--- a/projetos.html
+++ b/projetos.html
@@ -10,7 +10,7 @@
 <style>
 body{align-items: center;justify-content: center;text-align: center;margin: auto;background:linear-gradient(to right,white,blue,black);}
 h1{font-size: 30px;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-style: oblique;text-shadow: 8px;color: white;text-decoration: underline;}
-h2{font-style: italic;font-size: 20px;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;text-shadow: 8px;color: black;}
+h2{font-style: italic;font-size: 20px;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;text-shadow: 8px;color: white;}
 p{font-size: 15px;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-style: initial;text-shadow: 8px;color: white;}
 .color{padding: 10px;width: 300px;margin: auto;border-radius: 10px 10px;background-color: aqua;border: 5px solid red;box-shadow: 5px 5px 5px black;align-items: center;justify-content: center;}
 .summary:hover{transform: scale(1.04);transition: transform(0.5s);}
