Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -163,25 +163,25 @@
     <tbody style="background-color: bisque;color: bisque;"><tr><td colspan="20">NEW</td></tr></tbody>
     <tbody style="background-color: aqua;color: black;"><tr>
     <td>Introdução</td>
-    <td>Contextualização</td>
-    <td>Revisão de Literatura</td>
+    <td>Context</td>
+    <td>Revisão</td>
     <td>Objetivos</td>
     <td>Metodologia</td>
-    <td>Análise de Dados:</td>
-    <td>Estudo de Caso</td>
-    <td>Desafios e Obstáculos:</td>
-    <td>Soluções Propostas</td>
+    <td>Análise</td>
+    <td>Estudo</td>
+    <td>Desafios</td>
+    <td>Soluções </td>
     <td>Resultados:</td>
     <td>Discussão</td>
     <td>Conclusão</td>
     <td>Recomendações</td>
-    <td>Implicações Práticas</td>
-    <td>Limitações do Estudo</td>
+    <td>Implicações</td>
+    <td>Limitações</td>
     <td>Referências</td>
     <td>Glossário</td>
     <td>Agradecimentos</td>
     <td>Apêndices</td>
-    <td>Perspectivas Futuras</td></tr></tbody>
+    <td>Perspectivas</td></tr></tbody>
     <tbody style="background-color: bisque;color: bisque;"><tr><td colspan="20">NEW</td></tr></tbody>
     <thead style="background-color: blue;color: whitesmoke;"><tr><td colspan="20">NOTAS</td></tr></thead>
     <tbody style="background-color: bisque;color: bisque;"><tr><td colspan="20">NEW</td></tr></tbody>
